SONARPHP-1302 Update custom rule project